--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="item">
             <div class="item2"> <img
-                    src="https://lh3.googleusercontent.com/proxy/bqhyV-jJNL6Hk8n6nZd9zOK9FxoSXzBZtU0SFlahtmhebnRQ_nFk42Iq5wKVVJYq0MAOtALImB1V-nRdFylEFMA1UYVNtCYsdFZ3kKJZfknOt4HCMFgengpTCFycK7oiI2GYIX6muzDnIKBQYTi62EHDXWJeaTM"
+                    src="https://press.aboutamazon.com/system/files-encrypted/nasdaq_kms/inline-images/Amazon-logo.jpg"
                     width="300" height="300" alt="">
             </div>
             <p>
