--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="item">
             <div class="item2"> <img
-                    src="https://press.aboutamazon.com/system/files-encrypted/nasdaq_kms/inline-images/Amazon-logo.jpg"
+                    src="https://i1.wp.com/img.talkandroid.com/uploads/2019/03/Amazon-Logo.png?resize=512%2C512&ssl=1"
                     width="300" height="300" alt="">
             </div>
             <p>
